--- a/style.css
+++ b/style.css
@@ -1,97 +1,105 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background: linear-gradient(to right, rgb(212, 219, 221), rgb(130, 194, 58));
-    min-height: 100vh;
-}
-
-header,
-form {
-    font-size: 1.5rem;
-    min-height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-form input,
-form button {
-    padding: 0.5rem;
-    font-size: 1.5rem;
-    border: none;
-    background: #fff;
-}
-
-form button {
-    color: #060827;
-    background: #fff;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-form button:hover {
-    background: #060827;
-    color: #fff;
-}
-
-.todo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.todo-list {
-    min-width: 30%;
-    list-style: none;
-}
-
-.todo {
-    margin: 0.5rem;
-    background: #fff;
-    color: #000;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.5s ease;
-}
-
-.todo li {
-    flex: 1;
-}
-
-.trash-btn,
-.completed-btn {
-    background: #060827;
-    color: #fff;
-    border: none;
-    padding: 1rem;
-    cursor: pointer;
-    font-size: 1rem;
-}
-
-.completed-btn {
-    background: rgb(59, 140, 207);
-}
-
-
-/* evita conflitos entre botoes */
-
-.fa-trash,
-.fa-check {
-    pointer-events: none;
-}
-
-.completed {
-    text-decoration: line-through;
-    opacity: 0.5;
-}
-
-.fall {
-    transform: translate(8rem) rotate(20deg);
-    opacity: 0;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    body {
+        background: linear-gradient(to right, rgb(212, 219, 221), rgb(130, 194, 58));
+        min-height: 100vh;
+    }
+    
+    header,
+    form {
+        font-size: 1.5rem;
+        min-height: 20vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    form input,
+    form button {
+        padding: 0.5rem;
+        font-size: 1.5rem;
+        border: none;
+        background: #fff;
+    }
+    
+    form button {
+        color: #060827;
+        background: #fff;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+    
+    form button:hover {
+        background: #060827;
+        color: #fff;
+    }
+    
+    .todo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .todo-list {
+        min-width: 30%;
+        list-style: none;
+    }
+    
+    .todo {
+        margin: 0.5rem;
+        background: #fff;
+        color: #000;
+        font-size: 1.5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        transition: all 0.5s ease;
+    }
+    
+    .todo li {
+        flex: 1;
+    }
+    
+    .trash-btn,
+    .completed-btn {
+        background: #060827;
+        color: #fff;
+        border: none;
+        padding: 1rem;
+        cursor: pointer;
+        font-size: 1rem;
+    }
+    
+    .completed-btn {
+        background: rgb(59, 140, 207);
+    }
+    /* evita conflitos entre botoes */
+    
+    .fa-trash,
+    .fa-check {
+        pointer-events: none;
+    }
+    
+    .completed {
+        text-decoration: line-through;
+        opacity: 0.5;
+    }
+    
+    .fall {
+        transform: translate(8rem) rotate(20deg);
+        opacity: 0;
+    }
+    
+    .select {
+        appearance: none;
+        outline: none;
+        border: none;
+        color: #060827;
+        width: 10rem;
+        cursor: pointer;
+        padding: 1rem;
+    }
