class-js-e-alteracoes-no-css

--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,25 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-:root{
-    --primary-color: #FFBA00;
-    --secundary-color: #FFF1CC;
+:root {
+    --primary-color: #8f8876;
+    --secundary-color: #42381d;
     --shadow-color: #CCC;
     --text-color: #FFF;
 }
 
-body{
+body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: 'karla', sans-serif;
-    position:relative;
+    position: relative;
 }
 
-header{
+header {
     background-color: var(--primary-color);
     height: 70px;
     text-align: center;
@@ -27,12 +27,12 @@ header{
     box-shadow: 0 1px 2px var(--shadow-color);
 }
 
-.header-title{
+.header-title {
     color: black;
     font-size: 2rem;
 }
 
-main{
+main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -44,27 +44,26 @@ main{
     gap: 20px;
 }
 
-footer{
-    width:100;
+footer {
+    width: 100;
     text-align: center;
     font-weight: 200;
     font-style: italic;
     padding: 20px;
 }
 
-@media (max-width:480px){
-    header{
-        position:fixed;
-        width:100%;
+@media (max-width:480px) {
+    header {
+        position: fixed;
+        width: 100%;
     }
-    .header-title{
+    .header-title {
         font-size: 1.5rem;
     }
-
-    main{
+    main {
         padding: 0;
         margin: 20px 0 0 0;
-        width:100%;
+        width: 100%;
         box-shadow: none;
     }
 }
